# melting-schemas

./: pyproject.toml  requirements.txt
melting_schemas/: json_schema.py  meta.py  usage.py  utils.py
melting_schemas/completion/: base_settings.py  buffered_ml_messages.py  chat.py  fcall.py  finish_reason.py  streamed_ml_messages.py  tcall.py  templating.py  utils.py
melting_schemas/completion/chat/: __init__.py  examples.py  requests.py  responses.py  settings.py
melting_schemas/completion/fcall/: __init__.py  examples.py  requests.py  responses.py  settings.py  utils.py
melting_schemas/completion/tcall/: __init__.py  examples.py  params.py  requests.py  responses.py  settings.py  special.py  specs.py  utils.py
melting_schemas/completion/text/: __init__.py  settings.py
melting_schemas/encoding/: examples.py  text_encoding.py
melting_schemas/historian/: text_completions.py
melting_schemas/templating/: examples.py  prompt.py
